apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        fsGroup: 33 # www-data group ID
        runAsUser: 33 # www-data user ID
        runAsGroup: 33 # www-data group ID

      containers:
        - name: linkding
          image: sissbruecker/linkding:1.43.0

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 9090

          volumeMounts:
            - mountPath: "/etc/linkding/data/"
              name: linkding-data-pvc

      volumes:
        - name: linkding-data-pvc
          persistentVolumeClaim:
            claimName: linkding-data-pvc
