apps/base/linkding/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkding-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: linkding
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              # The Kubernetes control plane sets an immutable label kubernetes.io/metadata.name on all namespaces, the value of the label is the namespace name.
              # While NetworkPolicy cannot target a namespace by its name with some object field, you can use the standardized label to target a specific namespace.
              # https://kubernetes.io/docs/concepts/services-networking/network-policies/
              kubernetes.io/metadata.name: linkding
      ports:
        - protocol: TCP
          port: 9090

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 9090
